--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
                        } else {
                        var data = document.getElementById('data');
 					   fdata=response.data;
+					   alert(response.authResponse.accessToken);
 					   console.log("fdata: "+fdata);
                        response.data.forEach(function(item) {
-                                             var d = document.createElement('div');
+	                                              var d = document.createElement('div');
                                              d.innerHTML = "<img src="+item.picture+"/>"+item.name;
                                              data.appendChild(d);
                                              });
@@ -97,6 +98,7 @@
                 FB.login(
                          function(response) {
                          if (response.session) {
+                         	
                          alert('logged in');
                          } else {
                          alert('not logged in');
