--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                        } else {
                        var data = document.getElementById('data');
 					   fdata=response.data;
+					   alert(response.authResponse.userID);
 					   alert(response.authResponse.accessToken);
 					   console.log("fdata: "+fdata);
                        response.data.forEach(function(item) {
