--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 		<!--<button onclick="getSession()">Get session</button>-->
 		<button onclick="getLoginStatus()">Get login</button>
 		<button onclick="logout()">Logout</button>
-		<button onclick="facebookWallPost()">facebookWallPost</button>
-		<button onclick="publishStoryFriend()">friendstory</button>
 		<button onclick="myPics()">MyPhoto</button>
+		<button onclick="facebookWallPost()">facebookWallPost</button>
+		<!--<button onclick="publishStoryFriend()">friendstory</button>-->
+	
         
         <div id="data">loading ...</div>
         
