--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
                        	alert(JSON.stringify(response.picture));
                        	var res_pic=response.picture;
                        	alert(res_pic);
+                       	alert(res_pic.data);
+                       	alert(res_pic.url);
                        	$.each(res_pic,function(i,item){
                        		alert('coming');
                        		alert(item.url);
