--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                        	var res_pic=response.picture;
                        	alert(res_pic);
                        	alert(res_pic.data);
-                       	alert(res_pic.url);
+                       	alert(res_pic.data.url);
                        	$.each(res_pic,function(i,item){
                        		alert('coming');
                        		alert(item.url);
