--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             }
             
             function login() {
-            	if($('#final_pic')val()!='')
+            	if(!($('#final_pic')val()==''))
             	{
             		alert('already login ');
             	}
