--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                        //	alert(res_pic.data);
                        	alert(res_pic.data.url);
                        	var final_pic=res_pic.data.url;
-                       	$('#final_pic').val(1);
+                       	//$('#final_pic').val(1);
                        	/*$.each(res_pic,function(i,item){
                        		alert('coming');
                        		alert(item.url);
